--- a/Mifalot-app/src/app/pages/reports/reports.component.html
+++ b/Mifalot-app/src/app/pages/reports/reports.component.html
@@ -1,1 +1,34 @@
 <app-page-header [item] = "header"> </app-page-header>
+
+
+<div class="container">
+    <div class="row">           
+        <div class="dropdown col-lg-6"> 
+            <button class="btn btn-info btn-select" type="button" data-toggle="dropdown">
+                <input type="hidden" class="btn-select-input" id="" name="" value="" />
+                <span class="btn-select-value">בחר תאריך</span>
+                <span class='btn-select-arrow glyphicon glyphicon-chevron-down'></span>
+                </button>
+                <ul class="dropdown-menu">
+                    <li>Option 1</li>
+                    <li class="selected">Option 2</li>
+                    <li>Option 3</li>
+                    <li>Option 4</li>
+                </ul>
+            </div>
+        
+        <div class="dropdown col-lg-6"> 
+            <button class="btn btn-primary btn-select" type="button" data-toggle="dropdown">
+                <input type="hidden" class="btn-select-input" id="" name="" value="" />
+                <span class="btn-select-value">בחר בחר קבוצה</span>
+                <span class='btn-select-arrow glyphicon glyphicon-chevron-down'></span>
+                </button>
+                <ul class="dropdown-menu">
+                    <li>Option 1</li>
+                    <li class="selected">Option 2</li>
+                    <li>Option 3</li>
+                    <li>Option 4</li>
+                </ul>
+        </div>    
+    </div>
+</div>
