--- a/Mifalot-app/src/app/pages/attendance/attendance.component.css
+++ b/Mifalot-app/src/app/pages/attendance/attendance.component.css
@@ -1,15 +1,6 @@
 
-/*form*/
-.form-area
-{
-    background-color: #FAFAFA;
-	padding: 10px 40px 60px;
-	margin: 10px 0px 60px;
-	border: 1px solid GREY;
-	}
-
 /*checklist*/
-
+/*
 
 .funkyradio div {
   clear: both;
@@ -95,7 +86,9 @@
 .funkyradio-success input[type="checkbox"]:checked ~ label:before {
   color: #fff;
   background-color: #5cb85c;
-}
+}*/
+
+
 
 /*footer*/
 footer{
@@ -149,6 +142,145 @@ footer{
   cursor: pointer;
 }
 
-.confirm_butt{
+/*.confirm_butt
+{
   margin-top: 10px;
+}*/
+
+.vertical-menu 
+{
+    padding: 2%;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 62.5%;
+    line-height: 1;
+    color: #414141;
+    margin: 0 auto;
+    margin-top: 2%;
+    margin-bottom: 10%;
+    max-width: 100%;
+    width: 100%;
+    height: 45vh;
+
+    overflow-y: scroll;
 }
+
+.btn-team
+{
+    white-space: normal;
+    height: 100%;
+    font-size: 150%;
+    font-weight: bold;
+}
+
+.btn-confirm
+{
+    white-space: normal;
+    height: 100%;
+    font-size: 110%;
+    font-weight: bold;
+}
+
+.btn-bottom
+{
+    display: block;
+    height: 50px;
+    background-color: transparent;
+}
+
+
+.thumbnail
+{
+    height: 120px;
+    background-color: transparent;
+}
+
+.title
+{
+  color: white;
+  margin-bottom: 5%;
+}
+
+.pupil-name
+{
+  color: white;
+  margin-right: 10%;
+
+}
+
+.vertical-menu
+{
+  text-align: right;
+  font-size: 150%;
+}
+
+/******************************/
+
+.checkbox label:after, 
+.radio label:after {
+    content: '';
+    display: table;
+    clear: both;
+}
+/*
+.checkbox .cr,
+.radio .cr {
+    position: relative;
+    display: block;
+    border: 1px solid #a9a9a9;
+    border-radius: .25em;
+    width: 1.3em;
+    height: 1.3em;
+    float: right;
+    margin-right: .5em;
+}
+*/
+.radio .cr {
+    border-radius: 50%;
+}
+
+.checkbox .cr .cr-icon,
+.radio .cr .cr-icon {
+    position: absolute;
+    font-size: .8em;
+    line-height: 0;
+    top: 50%;
+    left: 20%;
+}
+
+.radio .cr .cr-icon {
+    margin-left: 0.04em;
+}
+
+.checkbox label input[type="checkbox"],
+.radio label input[type="radio"] {
+    display: none;
+}
+
+.checkbox label input[type="checkbox"] + .cr > .cr-icon,
+.radio label input[type="radio"] + .cr > .cr-icon {
+    transform: scale(3) rotateZ(-20deg);
+    opacity: 0;
+    transition: all .3s ease-in;
+}
+
+.checkbox label input[type="checkbox"]:checked + .cr > .cr-icon,
+.radio label input[type="radio"]:checked + .cr > .cr-icon {
+    transform: scale(1) rotateZ(0deg);
+    opacity: 1;
+}
+
+.checkbox label input[type="checkbox"]:disabled + .cr,
+.radio label input[type="radio"]:disabled + .cr {
+    opacity: .5;
+}
+
+label
+{
+  font-size: 1em;
+  padding: 1%;
+}
+
+ hr
+ {
+   width: 80%;
+ }
