--- a/Mifalot-app/src/app/pages/login/login.component.html
+++ b/Mifalot-app/src/app/pages/login/login.component.html
@@ -16,7 +16,7 @@
     <form class = "form-signin" (submit) = "loginWithEmail($event, email.value, password.value)">
       <label for = "email" class = "sr-only"> כתובת מייל </label>
       <div class = "input-group">
-        <input #email type = "email" id = "email" class = "form-control" placeholder = 'כתובת דוא״ל'>
+        <input #email type = "email" id = "email" class = "form-control" placeholder = 'כתובת דוא״ל' value = 'mifalotManager@gmail.com'>
         <span class = "input-group-addon"><i class = "fa fa-user"></i></span> 
       </div>
 
@@ -32,8 +32,7 @@
 
       <button class = "btn btn-md btn-primary btn-block" type = "submit"> התחבר </button>
     </form>
-    <!--<hr>
-    <button class = "login loginmodal-submit" (click) = "loginWithGoogle()"> <i class = "fa fa-google"></i>oogle כניסה דרך  </button>-->
+
     <hr>
     <a [routerLink] = "['/register']" style = "cursor: pointer;"> הירשם כעת </a>
   </div>
