--- a/Mifalot-app/src/app/pages/messages/messages.component.css
+++ b/Mifalot-app/src/app/pages/messages/messages.component.css
@@ -1,10 +1,28 @@
 
+.btn-chat
+{
+    white-space: normal;
+    height: 100%;
+}
+
+.thumbnail
+{
+    height: 90px;
+    background-color: transparent;
+}
+
+/********************************************/
+
+.create-chat
+{
+  color:white;
+}
+
 br 
 { 
     display: block; 
     line-height: 1.6em; 
 } 
-
 
 p 
 {
@@ -23,10 +41,6 @@ p
     width: 100%;
 }
 
-.emoji-input
-{
-  border: 2%;
-}
 /**********************************************/
 
 .container
