--- a/Mifalot-app/src/app/pages/users-confirm/users-confirm.component.html
+++ b/Mifalot-app/src/app/pages/users-confirm/users-confirm.component.html
@@ -1,20 +1,55 @@
 <div *ngIf = "permission == 1" class = "container" >
 
-<app-page-header [item] = "header"> </app-page-header>
+  <app-page-header [item] = "header"> </app-page-header>
 
-    <div class = "row" >
+<div *ngIf = "!userSelected">
+  <div class = "row" >
 
-       <div *ngFor = "let user of users | async" [ngSwitch] = "user.permission"> 
-        <div class = "col-lg-6 col-md-6 col-xs-6 thumb">
-          <a *ngSwitchCase = "'4'" class = "thumbnail">
-              <button type = "button" class = "btn btn-default btn-block" > <i class = "fa fa-user-plus" > </i> <br/>   {{ user.name }} </button>
-          </a>
-          <a *ngSwitchDefault> אין כרגע משתמשים הממתינים לאישור </a>
-        </div>
-       </div>
-    </div>
+    <div *ngFor = "let user of users | async" [ngSwitch] = "user.permission"> 
+      <div *ngSwitchCase = "'4'" class = "col-lg-6 col-md-6 col-xs-6 thumb">
+        <a class = "thumbnail">
+            <button (click) = "showUserDetails(user)" type = "button" class = "btn btn-default btn-block" > <i class = "fa fa-user-plus" > </i> <br/>   {{ user.name }} </button>
+        </a>
+        <!--<a *ngSwitchDefault> אין כרגע משתמשים הממתינים לאישור </a>-->
+      </div>
+      </div>
+  </div>
 
   </div>
+
+  <div *ngIf = "userSelected">
+    <div class = "container">
+      <div class = "profile-head">
+    <div class = "row" >
+      <h4 class = "text-center">  :פרטי המשתמש אותו אתה עומד לאשר </h4>
+      <ul class = "text-right">
+        <li> <span> {{ userName }} :שם </span><span class = "fa fa-user-circle-o"></span></li>
+        <li> <span >{{ userEmail }} :דוא״ל </span><span class = "fa fa-envelope"></span></li>
+      </ul>
+      <h4 class = "text-center">  :בחר את סוג המשתמש </h4>
+
+
+
+
+<div class = "btn-group" data-toggle = "buttons">
+			
+			<label class = "btn btn-success active">
+				<input type="radio" name = "options" id = "option2" autocomplete = "off" chacked>
+				<span class = "glyphicon glyphicon-ok"></span> <span style = "color:white"> מנהל אזור </span>
+			</label>
+
+			<label class = "btn btn-primary">
+				<input type = "radio" name = "options" id = "option1" autocomplete = "off">
+				<span class = "glyphicon glyphicon-ok"> </span> <span style = "color:white"> מאמן </span>
+			</label>
+
+
+    </div>
+  </div>
+    </div>
+  </div>
+
+</div>
 
 
 
