--- a/Mifalot-app/src/app/pages/reports/reports.component.html
+++ b/Mifalot-app/src/app/pages/reports/reports.component.html
@@ -40,6 +40,7 @@
 					<div class="panel-body">
 						<input type="text" class="form-control" id="dev-table-filter" data-action="filter" data-filters="#dev-table" placeholder="Filter Developers" />
 					</div>
+				<div class="vertical-menu"> 
 					<table class="table table-hover" id="dev-table">
 						<thead>
 							<tr>
@@ -49,7 +50,43 @@
                                 <th>#</th>
 							</tr>
 						</thead>
-						<tbody>
+						<tbody >
+							<tr>
+								<td>לא</td>
+								<td>חקקיאן</td>
+								<td>דודי</td>
+								<td>1</td>
+							</tr>
+							<tr>
+								<td>כן</td>
+								<td>אנקונה</td>
+								<td>יוסי</td>
+								<td>2</td>
+							</tr>
+							<tr>
+								<td>כן</td>
+								<td>הפועל</td>
+								<td>רק</td>
+								<td>3</td>
+							</tr>
+							<tr>
+								<td>לא</td>
+								<td>חקקיאן</td>
+								<td>דודי</td>
+								<td>1</td>
+							</tr>
+							<tr>
+								<td>כן</td>
+								<td>אנקונה</td>
+								<td>יוסי</td>
+								<td>2</td>
+							</tr>
+							<tr>
+								<td>כן</td>
+								<td>הפועל</td>
+								<td>רק</td>
+								<td>3</td>
+							</tr>
 							<tr>
 								<td>לא</td>
 								<td>חקקיאן</td>
@@ -70,6 +107,7 @@
 							</tr>
 						</tbody>
 					</table>
+				</div>
 				</div>
 			</div>
 
