--- a/Mifalot-app/src/app/pages/reports/reports.component.html
+++ b/Mifalot-app/src/app/pages/reports/reports.component.html
@@ -3,35 +3,32 @@
 
 <div class="container">
     <div class="row"> 
-		<div class="dropdown col-lg-6"> 
-            <button class="btn btn-primary btn-select" type="button" data-toggle="dropdown">
-                <input type="hidden" class="btn-select-input" id="" name="" value="" />
-                <span class="btn-select-value">בחר קבוצה</span>
-                <span class='btn-select-arrow glyphicon glyphicon-chevron-down'></span>
-                </button>
-                <ul class="dropdown-menu">
-                    <li>Option 1</li>
-                    <li class="selected">Option 2</li>
-                    <li>Option 3</li>
-                    <li>Option 4</li>
-                </ul>
-        </div>
-
-        <div class="dropdown col-lg-6"> 
-            <button class="btn btn-info btn-select" type="button" data-toggle="dropdown">
-                <input type="hidden" class="btn-select-input" id="" name="" value="" />
-                <span class="btn-select-value">בחר תאריך</span>
-                <span class='btn-select-arrow glyphicon glyphicon-chevron-down'></span>
-                </button>
-                <ul class="dropdown-menu">
-                    <li>Option 1</li>
-                    <li class="selected">Option 2</li>
-                    <li>Option 3</li>
-                    <li>Option 4</li>
-                </ul>
-            </div>
-
-        	<div class="col-md-6">
+		<div class ="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+	<div class="dropdown">
+  <button class="btn btn-primary btn-block dropdown-toggle" type="button" data-toggle="dropdown">
+  <span class="caret"></span>בחר תאריך</button>
+  <ul class="dropdown-menu">
+    <li><a href="#">HTML</a></li>
+    <li><a href="#">CSS</a></li>
+    <li><a href="#">JavaScript</a></li>
+  </ul>
+</div>
+</div>
+<div class ="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+    <div class="dropdown">
+  <button class="btn btn-primary btn-block dropdown-toggle" type="button" data-toggle="dropdown">בחר קבוצה
+  <span class="caret"></span></button>
+  <ul class="dropdown-menu">
+    <li><a href="#">HTML</a></li>
+    <li><a href="#">CSS</a></li>
+    <li><a href="#">JavaScript</a></li>
+  </ul>
+</div>
+</div>
+</div>
+<p>
+<div class="row">
+        	<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 				<div class="panel panel-primary">
 					<div class="panel-heading">
 						<h3 class="panel-title">רשימת נוכחות</h3>
