--- a/Mifalot-app/src/app/pages/login/login.component.html
+++ b/Mifalot-app/src/app/pages/login/login.component.html
@@ -16,7 +16,7 @@
     <form class = "form-signin" (submit) = "loginWithEmail($event, email.value, password.value)">
       <label for = "email" class = "sr-only"> כתובת מייל </label>
       <div class = "input-group">
-        <input #email type = "email" id = "email" class = "form-control" placeholder = 'כתובת דוא״ל' value = 'mifalotManager@gmail.com'>
+        <input #email type = "email" id = "email" class = "form-control" placeholder = 'כתובת דוא״ל' value = 'guest@gmail.com'>
         <span class = "input-group-addon"><i class = "fa fa-user"></i></span> 
       </div>
 
