--- a/Mifalot-app/src/app/pages/loading/loading.component.html
+++ b/Mifalot-app/src/app/pages/loading/loading.component.html
@@ -10,7 +10,7 @@
         <div class="dot"></div>
         <div class="dot"></div>
         <div class="dot"></div>
-        <div class = "loading text-center"> אנא המתן </div>
+        <div class = "loading text-center"> ...אנא המתן </div>
       </div>
     </div>
   </div>
