--- a/Mifalot-app/src/app/app.component.css
+++ b/Mifalot-app/src/app/app.component.css
@@ -10,6 +10,7 @@
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0264d6', endColorstr='#1c2b5a',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 	width: 100%;
 	height: 100%;
+	max-height: 100%;
 
 	/*position:fixed;*/
 }
@@ -21,6 +22,5 @@
 
 .align-right
 {
-	text-align: right;
+	float: right;
 }
-
