--- a/Mifalot-app/src/app/app.component.html
+++ b/Mifalot-app/src/app/app.component.html
@@ -5,23 +5,11 @@
 <nav class ="navbar navbar-default navbar-default" role="navigation">
    <div class = "container-fluid" id="navfluid">
        <div class = "navbar-header">
-           <button *ngIf = "isLoggedIn" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigationbar">
-               <span class = "sr-only">Toggle navigation</span>
-               <span class = "icon-bar"></span>
-               <span class = "icon-bar"></span>
-               <span class = "icon-bar"></span>
-            </button>
-          <a class = "navbar-brand" [routerLink] = "['']"> דף הבית </a>
+          <a class = "navbar-brand fa fa-home" [routerLink] = "['']"> דף הבית </a>
+           <a *ngIf = "isLoggedIn" class = "align-right navbar-brand fa fa-sign-out" (click) = "logout()"> התנתק </a>
+
        </div>
-       <div *ngIf = "isLoggedIn" class="collapse navbar-collapse" id="navigationbar">
-           <ul class = "nav navbar-nav navbar-right">
-             <li class = "align-right"> <a data-toggle="collapse" data-target=".navbar-collapse" (click) = "backClicked()"> לדף הקודם <i class = "fa fa-backward"></i> </a></li>
-             <li class = "align-right"> <a data-toggle="collapse" data-target=".navbar-collapse" id = "btn-logout" (click) = "logout()"> יציאה <i class = "fa fa-sign-out"></i> </a></li>
-           </ul>
-      </div>
-      <!-- /.navbar-collapse -->
    </div>
-   <!-- /.container-fluid -->
 </nav>
 
 
