--- a/Mifalot-app/src/app/app.component.html
+++ b/Mifalot-app/src/app/app.component.html
@@ -3,10 +3,10 @@
 <div class = "app-content">
 
 <nav class ="navbar navbar-default navbar-default" role="navigation">
-   <div class = "container-fluid" id="navfluid">
-       <div class = "navbar-header">
+   <div class = "container-fluid" id = "navfluid">
+       <div *ngIf = "isLoggedIn" class = "navbar-header">
           <a class = "navbar-brand fa fa-home" [routerLink] = "['']"> דף הבית </a>
-           <a *ngIf = "isLoggedIn" class = "align-right navbar-brand fa fa-sign-out" (click) = "logout()"> התנתק </a>
+           <a  class = "align-right navbar-brand fa fa-sign-out" (click) = "logout()"> התנתק </a>
 
        </div>
    </div>
