--- a/Mifalot-app/src/app/page-header/page-header.component.css
+++ b/Mifalot-app/src/app/page-header/page-header.component.css
@@ -32,3 +32,63 @@
   margin-bottom: 25px; 
   text-align: center;
 }
+
+
+/******************************************/
+/******** page-header Margin-top  *********/
+
+@media only screen and (max-height: 1366px)
+{
+  .page-header
+    {
+       margin-top: 0%;
+    }
+}
+
+@media only screen and (max-height: 1024px)
+{
+    .page-header
+    {
+       margin-top: 0%;    
+    }
+}
+
+@media only screen and (max-height: 736px)
+{
+    .page-header
+    {
+       margin-top: -6%;    
+    }
+}
+
+@media only screen and (max-height: 732px)
+{
+    .page-header
+    {
+       margin-top: -6%;    
+    }
+}
+
+@media only screen and (max-height: 667px)
+{
+    .page-header
+    {
+       margin-top: -6%;    
+    }
+}
+
+@media only screen and (max-height: 640px)
+{
+    .page-header
+    {
+       margin-top: -6%;    
+    }
+}
+
+@media only screen and (max-height: 568px)
+{
+    .page-header
+    {
+       margin-top: -6%;    
+    }
+}
