--- a/Mifalot-app/src/app/pages/attendance/attendance.component.css
+++ b/Mifalot-app/src/app/pages/attendance/attendance.component.css
@@ -1,94 +1,4 @@
 
-/*checklist*/
-/*
-
-.funkyradio div {
-  clear: both;
-  overflow: hidden;
-}
-
-.funkyradio label {
-  width: 100%;
-  border-radius: 3px;
-  border: 1px solid #D1D3D4;
-  font-weight: normal;
-}
-
-.funkyradio input[type="radio"]:empty,
-.funkyradio input[type="checkbox"]:empty {
-  display: none;
-}
-
-.funkyradio input[type="radio"]:empty ~ label,
-.funkyradio input[type="checkbox"]:empty ~ label {
-  position: relative;
-  line-height: 2.5em;
-  text-indent: 3.25em;
-  margin-top: 2em;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-.funkyradio input[type="radio"]:empty ~ label:before,
-.funkyradio input[type="checkbox"]:empty ~ label:before {
-  position: absolute;
-  display: block;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  content: '';
-  width: 2.5em;
-  background: #D1D3D4;
-  border-radius: 3px 0 0 3px;
-}
-
-.funkyradio input[type="radio"]:hover:not(:checked) ~ label,
-.funkyradio input[type="checkbox"]:hover:not(:checked) ~ label {
-  color: #888;
-}
-
-.funkyradio input[type="radio"]:hover:not(:checked) ~ label:before,
-.funkyradio input[type="checkbox"]:hover:not(:checked) ~ label:before {
-  content: '\2714';
-  text-indent: .9em;
-  color: #C2C2C2;
-}
-
-.funkyradio input[type="radio"]:checked ~ label,
-.funkyradio input[type="checkbox"]:checked ~ label {
-  color: #777;
-}
-
-.funkyradio input[type="radio"]:checked ~ label:before,
-.funkyradio input[type="checkbox"]:checked ~ label:before {
-  content: '\2714';
-  text-indent: .9em;
-  color: #333;
-  background-color: #ccc;
-}
-
-.funkyradio input[type="radio"]:focus ~ label:before,
-.funkyradio input[type="checkbox"]:focus ~ label:before {
-  box-shadow: 0 0 0 3px #999;
-}
-
-
-.funkyradio-primary input[type="radio"]:checked ~ label:before,
-.funkyradio-primary input[type="checkbox"]:checked ~ label:before {
-  color: #fff;
-  background-color: #337ab7;
-}
-
-.funkyradio-success input[type="radio"]:checked ~ label:before,
-.funkyradio-success input[type="checkbox"]:checked ~ label:before {
-  color: #fff;
-  background-color: #5cb85c;
-}*/
-
-
 
 /*footer*/
 footer{
@@ -142,16 +52,10 @@ footer{
   cursor: pointer;
 }
 
-/*.confirm_butt
-{
-  margin-top: 10px;
-}*/
-
 .vertical-menu 
 {
     padding: 2%;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 62.5%;
     line-height: 1;
     color: #414141;
     margin: 0 auto;
@@ -159,7 +63,8 @@ footer{
     margin-bottom: 10%;
     max-width: 100%;
     width: 100%;
-    height: 45vh;
+    text-align: right;
+    font-size: 130%;
 
     overflow-y: scroll;
 }
@@ -207,12 +112,6 @@ footer{
 
 }
 
-.vertical-menu
-{
-  text-align: right;
-  font-size: 150%;
-}
-
 /******************************/
 
 .checkbox label:after, 
@@ -221,19 +120,7 @@ footer{
     display: table;
     clear: both;
 }
-/*
-.checkbox .cr,
-.radio .cr {
-    position: relative;
-    display: block;
-    border: 1px solid #a9a9a9;
-    border-radius: .25em;
-    width: 1.3em;
-    height: 1.3em;
-    float: right;
-    margin-right: .5em;
-}
-*/
+
 .radio .cr {
     border-radius: 50%;
 }
@@ -284,3 +171,64 @@ label
  {
    width: 80%;
  }
+
+
+/****************************************/
+/********** Scrollbar Height  ***********/
+
+@media only screen and (max-height: 1366px)
+{
+    .vertical-menu 
+    {
+        height: 920px;
+    }
+}
+
+@media only screen and (max-height: 1024px)
+{
+    .vertical-menu 
+    {
+        height: 620px;
+    }
+}
+
+@media only screen and (max-height: 736px)
+{
+    .vertical-menu 
+    {
+        height: 400px;
+    }
+}
+
+@media only screen and (max-height: 732px)
+{
+    .vertical-menu 
+    {
+        height: 396px;
+    }
+}
+
+@media only screen and (max-height: 667px)
+{
+    .vertical-menu 
+    {
+        height: 330px;
+    }
+}
+
+@media only screen and (max-height: 640px)
+{
+    .vertical-menu 
+    {
+        height: 310px;
+    }
+}
+
+@media only screen and (max-height: 568px)
+{
+    .vertical-menu 
+    {
+        height: 235px;
+        font-size: 100%;
+    }
+}
