--- a/Mifalot-app/src/app/pages/attendance/attendance.component.html
+++ b/Mifalot-app/src/app/pages/attendance/attendance.component.html
@@ -44,7 +44,7 @@
 
  <div class = "col-lg-6 col-md-6 col-xs-6 thumb">
           <a class = "btn-bottom" (click) = "startOver()"> 
-            <button type = "button" class = "btn btn-danger btn-block btn-confirm" > איפוס טופס ובחירת קבוצה מחדש </button>
+            <button type = "button" class = "btn btn-danger btn-block btn-confirm" > איפוס טופס </button>
           </a>
         </div>
 
