--- a/Mifalot-app/src/app/pages/messages/messages.component.css
+++ b/Mifalot-app/src/app/pages/messages/messages.component.css
@@ -257,3 +257,69 @@ input::placeholder
 .pink:after {
   border-bottom-color: #ffbee3;
 }
+
+
+/****************************************/
+/********** Scrollbar Height  ***********/
+
+@media only screen and (max-height: 1366px)
+{
+    .vertical-menu 
+    {
+        height: 1100px;
+    }
+}
+
+@media only screen and (max-height: 1024px)
+{
+    .vertical-menu 
+    {
+        height: 770px;
+    }
+}
+
+@media only screen and (max-height: 736px)
+{
+    .vertical-menu 
+    {
+        height: 510px;
+    }
+}
+
+@media only screen and (max-height: 732px)
+{
+    .vertical-menu 
+    {
+        height: 505px;
+    }
+}
+
+@media only screen and (max-height: 667px)
+{
+    .vertical-menu 
+    {
+        height: 440px;
+    }
+}
+
+@media only screen and (max-height: 640px)
+{
+    .vertical-menu 
+    {
+        height: 410px;
+    }
+}
+
+@media only screen and (max-height: 568px)
+{
+    .vertical-menu 
+    {
+        height: 340px;
+    }
+}
+
+
+
+
+
+
