--- a/Mifalot-app/src/app/pages/reports/reports.component.css
+++ b/Mifalot-app/src/app/pages/reports/reports.component.css
@@ -33,7 +33,6 @@ th {
     display: block;
     max-width: 100%;
     width: 100%;
-    height: 35vh;
     padding-right: 3%;
     overflow-y: scroll;
 }
@@ -41,4 +40,63 @@ th {
 .dropdown-menu
 {
     text-align: right;
+}
+
+/****************************************/
+/********** Scrollbar Height  ***********/
+
+@media only screen and (max-height: 1366px)
+{
+    .vertical-menu 
+    {
+        height: 1100px;
+    }
+}
+
+@media only screen and (max-height: 1024px)
+{
+    .vertical-menu 
+    {
+        height: 750px;
+    }
+}
+
+@media only screen and (max-height: 736px)
+{
+    .vertical-menu 
+    {
+        height: 450px;
+    }
+}
+
+@media only screen and (max-height: 732px)
+{
+    .vertical-menu 
+    {
+        height: 446px;
+    }
+}
+
+@media only screen and (max-height: 667px)
+{
+    .vertical-menu 
+    {
+        height: 380px;
+    }
+}
+
+@media only screen and (max-height: 640px)
+{
+    .vertical-menu 
+    {
+        height: 355px;
+    }
+}
+
+@media only screen and (max-height: 568px)
+{
+    .vertical-menu 
+    {
+        height: 285px;
+    }
 }
