--- a/Mifalot-app/src/app/app.component.html
+++ b/Mifalot-app/src/app/app.component.html
@@ -4,9 +4,9 @@
 
 <nav class ="navbar navbar-default navbar-default" role="navigation">
    <div class = "container-fluid" id="navfluid">
-       <div class = "navbar-header">
+       <div *ngIf = "isLoggedIn" class = "navbar-header">
           <a class = "navbar-brand fa fa-home" [routerLink] = "['']"> דף הבית </a>
-           <a *ngIf = "isLoggedIn" class = "align-right navbar-brand fa fa-sign-out" (click) = "logout()"> התנתק </a>
+           <a class = "align-right navbar-brand fa fa-sign-out" (click) = "logout()"> התנתק </a>
 
        </div>
    </div>
