--- a/Mifalot-app/src/app/pages/reports/reports.component.html
+++ b/Mifalot-app/src/app/pages/reports/reports.component.html
@@ -44,7 +44,7 @@
 		<div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
 			<div *ngIf = "dateSelected" class = "panel panel-primary">
 				<div class = "panel-heading">
-					<h3 class = "panel-title"> רשימת נוכחות </h3>
+					<h3 class = "panel-title"> {{ chosenDate | date: "dd/MM/yy" }} רשימת נוכחות עבור {{ chosenTeam }} בתאריך  </h3>
 				</div>
 				<div class = "panel-body">
 					<input type = "text" class = "form-control" id = "dev-table-filter" data-action = "filter" data-filters = "#dev-table" placeholder = "Filter Developers" />
