--- a/Mifalot-app/src/app/pages/messages/messages.component.css
+++ b/Mifalot-app/src/app/pages/messages/messages.component.css
@@ -11,6 +11,29 @@
     background-color: transparent;
 }
 
+.chat-title
+{
+  margin:0 auto;
+  width: 60%;
+  display: block;
+  /*color: #355681;*/
+  color:white;
+  text-align: center;
+  margin-bottom: 2%;
+
+	font-weight: 400;
+	position: relative;  
+	font-size: 17px;
+	line-height: 26px;
+
+  text-shadow: 1px 1.5px 2px rgba(150, 150, 150, 1);
+  box-shadow: inset 0 0 0 1px white;
+		/*inset 0 0 0 1px rgba(53,86,129, 0.4), 
+		inset 0 0 5px rgba(53,86,129, 0.5),*/
+		/*inset -285px 0 35px white;*/
+	border-radius: 10px 10px 10px 10px;
+}
+
 /********************************************/
 
 .create-chat
@@ -81,8 +104,9 @@ input::placeholder
 
 
 /**********************************************/
+/********* Always Display Scrollbar ***********/
 
-::-webkit-scrollbar 
+/*::-webkit-scrollbar 
 {
   -webkit-appearance: none;
   width: 7px;
@@ -92,7 +116,7 @@ input::placeholder
 {
   border-radius: 4px;
   background-color: rgba(0, 0, 0, .5);
-}
+}*/
 
 
 /**********************************************/
@@ -180,7 +204,7 @@ input::placeholder
 
 .bubble p 
 {
-  font-size: 1.4em;
+  font-size: 1.3em;
 }
 
 /* green bubble */
@@ -266,7 +290,7 @@ input::placeholder
 {
     .vertical-menu 
     {
-        height: 1100px;
+        height: 1065px;
     }
 }
 
@@ -274,7 +298,7 @@ input::placeholder
 {
     .vertical-menu 
     {
-        height: 770px;
+        height: 735px;
     }
 }
 
@@ -282,7 +306,7 @@ input::placeholder
 {
     .vertical-menu 
     {
-        height: 510px;
+        height: 475px;
     }
 }
 
@@ -290,7 +314,7 @@ input::placeholder
 {
     .vertical-menu 
     {
-        height: 505px;
+        height: 470px;
     }
 }
 
@@ -298,7 +322,7 @@ input::placeholder
 {
     .vertical-menu 
     {
-        height: 440px;
+        height: 405px;
     }
 }
 
@@ -306,7 +330,7 @@ input::placeholder
 {
     .vertical-menu 
     {
-        height: 410px;
+        height: 380px;
     }
 }
 
@@ -314,7 +338,7 @@ input::placeholder
 {
     .vertical-menu 
     {
-        height: 340px;
+        height: 305px;
     }
 }
 
