--- a/Mifalot-app/src/app/pages/reports/reports.component.html
+++ b/Mifalot-app/src/app/pages/reports/reports.component.html
@@ -10,7 +10,7 @@
 			<div *ngIf = "teamSelected" class = "dropdown">
 				<button class = "btn btn-primary btn-block dropdown-toggle" type = "button" data-toggle = "dropdown">
 					<span class = "caret"></span>
-					בחר תאריך 
+					<span> {{ chosenDateString }} </span>
 				</button>
 				<ul class = "dropdown-menu">
 					<li *ngFor = "let date of dates; let i = index" [attr.data-index] = "i">
@@ -22,7 +22,7 @@
 		<div class = "col-xs-6 col-sm-6 col-md-6 col-lg-6">
 			<div class = "dropdown">
 				<button class = "btn btn-primary btn-block dropdown-toggle" type = "button" data-toggle = "dropdown">
-					בחר קבוצה
+					<span>	{{ chosenTeam }} </span>
 					<span class = "caret"></span>
 				</button>
 				<ul class = "dropdown-menu">
