--- a/Mifalot-app/src/app/app.component.html
+++ b/Mifalot-app/src/app/app.component.html
@@ -3,9 +3,9 @@
 <div class = "app-content">
 
     <!-- Nav bar -->
-    <nav class ="navbar navbar-default navbar-default" role = "navigation">
+    <nav *ngIf = "isLoggedIn" class ="navbar navbar-default navbar-default" role = "navigation">
     <div class = "container-fluid" id = "navfluid">
-        <div *ngIf = "isLoggedIn" class = "navbar-header">
+        <div class = "navbar-header">
             <a class = "navbar-brand fa fa-home" [routerLink] = "['']"> דף הבית </a>
             <a class = "align-right navbar-brand fa fa-sign-out" (click) = "logout()"> התנתק </a>
         </div>
