--- a/Mifalot-app/src/app/app.component.html
+++ b/Mifalot-app/src/app/app.component.html
@@ -1,9 +1,8 @@
-
-
+<!--
 <div class = "app-content">
-
+-->
     <!-- Nav bar -->
-    <nav class ="navbar navbar-default navbar-default" role = "navigation">
+ <!--   <nav class ="navbar navbar-default navbar-default" role = "navigation">
     <div class = "container-fluid" id = "navfluid">
         <div *ngIf = "isLoggedIn" class = "navbar-header">
             <a class = "navbar-brand fa fa-home" [routerLink] = "['']"> דף הבית </a>
@@ -11,10 +10,12 @@
         </div>
     </div>
     </nav>
-
+-->
 
   <!-- Routing pages -->
-  <router-outlet> </router-outlet>
+ <!-- <router-outlet> </router-outlet>
 
-</div>
+</div>-->
+<app-insert></app-insert>
+
    
