--- a/Mifalot-app/src/app/app.component.html
+++ b/Mifalot-app/src/app/app.component.html
@@ -8,7 +8,7 @@
         <div class = "navbar-header">
             <a class = "navbar-brand fa fa-home" [routerLink] = "['']"> דף הבית </a>
             <a class = "align-right navbar-brand fa fa-sign-out" (click) = "logout()"> התנתק </a>
-
+            </div>
         </div>
     </nav>
 
@@ -17,6 +17,4 @@
     <router-outlet> </router-outlet>
 
 </div>
-
-<app-insert></app-insert>
 
